--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+	Copyright 2021 SMJ
+-->
 <head>
 	<title>An example Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
