Adding conflicting changes (on master)

--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
-	Copyright 2021 SMJ
+	Copyright 2021 SMJ conflict
 -->
 <head>
-	<title>An example Title</title>
+	<title>An conflict example Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some conflict content
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Company 20conflict</p>
 	</footer>
 </body>
 </html>
