--- a/simple.html
+++ b/simple.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2021 SMJ Computing Ltd
+	Adding before rebase conflicts
 -->
 <head>
-	<title>good An great example Title</title>
+	<title>An great example Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-		Good	Just some .. more .. content
+			Just some .. more .. content
 		</p>
 	</main>
 	<footer class="container">
