--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2021 SMJ Computing Ltd
 -->
 <head>
-	<title>An great example Title</title>
+	<title>good An great example Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some .. more .. content
+		Good	Just some .. more .. content
 		</p>
 	</main>
 	<footer class="container">
