--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Adding before rebase conflicts
 -->
 <head>
-	<title>An great example Title</title>
+	<title>Lots An great example Title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
